Note about file path for the copied script

--- a/HeroesOfPymoli/Main.ipynb
+++ b/HeroesOfPymoli/Main.ipynb
@@ -112,6 +112,7 @@
     }
    ],
    "source": [
+    "# This is a copy of the original script that is saved under the Resources/HeroesOfPymoli folder, therefore the listed file path below is inaccurate.\n",
     "# Importing dependencies\n",
     "import pandas as pd\n",
     "\n",
